<!--
     Copyright (C) 2021 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">Date Night</string>
    <!-- Shown above left column listing bus stops in full schedule fragment -->
    <string name="add_button">Add Button</string>
    <string name="add_category_fragment_title">Add New Category</string>
    <string name="category_name_req">Category Name *</string>
    <string name="save_action">Save</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="edit_idea">Edit</string>
    <string name="idea_name_req">Name</string>
    <string name="idea_location_req">Location</string>
    <string name="idea_description_req">Description</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="duplicate_category_message">Category already exists</string>
    <string name="filter">Filter</string>
    <string name="reroll">Reroll</string>
    <string name="category_empty_warning">Category does not have any entries</string>

    <string name="idea_name_header">Name</string>
    <string name="idea_distance_header">Distance</string>
    <string name="idea_name_sort_arrow">Idea Name Sort Arrow</string>
    <string name="idea_location_warning">Location is not valid. Try selecting from pre-existing locations</string>
    <string name="location_question">Does the category require a location</string>
    <string name="locate_button">Locate</string>
    <string name="share">Share</string>
    <string name="share_text">Name: %1$s&lt;br /&gt;Location: %2$s&lt;br /&gt;Description: %3$s</string>
    <string name="share_text_no_location">Name: %1$s&lt;br /&gt;Description: %2$s</string>
    <string name="delete_category">Delete Category</string>
    <string name="edit_category">Edit Category</string>
    <string name="suggest">Suggest</string>
    <string name="idea_list">Idea List</string>
    <string name="position_stack_url">http://api.positionstack.com/v1/forward?access_key=%1$s&amp;query=%2$s&amp;output=json</string>
    <string name="position_stack_api_key">0dbb931e01b8528009d24b773743961b</string>
</resources>
