<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.IdeaChoiceFragment">

    <Button
        android:id="@+id/suggestion_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/suggest"
        android:textSize="26dp"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/category_empty_warning"
        android:text="@string/category_empty_warning"
        android:textColor="@color/red_700"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_between_elements"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/suggestion_button"/>

    <Button
        android:id="@+id/idea_list_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/idea_list"
        android:textSize="26dp"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginBottom="120dp"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category_empty_warning" />

    <Button
        android:id="@+id/edit_category_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_category"
        android:textSize="26dp"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/idea_list_button" />

    <Button
        android:id="@+id/delete_category_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_category"
        android:textSize="26dp"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_category_button" />
</androidx.constraintlayout.widget.ConstraintLayout>