<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_between_elements">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/category_name_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_elements"
            android:hint="@string/category_name_req"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/category_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textAutoComplete|textCapWords"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/duplicate_category_message"
            android:textSize="18dp"
            android:text="@string/duplicate_category_message"
            android:textColor="@color/red_700"
            android:layout_marginTop="@dimen/margin_between_elements"
            android:layout_marginLeft="@dimen/margin_between_elements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/category_name_label"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/location_checkbox_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_elements"
            app:layout_constraintTop_toBottomOf="@id/duplicate_category_message"
            app:layout_constraintStart_toStartOf="parent">
            <CheckBox
                android:id="@+id/location_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_elements"
                app:layout_constraintTop_toBottomOf="@id/duplicate_category_message"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/location_checkbox_label"
                android:text="@string/location_question"
                android:textSize="@dimen/margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_elements"
                app:layout_constraintTop_toBottomOf="@id/duplicate_category_message"
                app:layout_constraintBottom_toBottomOf="@id/location_checkbox"
                app:layout_constraintStart_toEndOf="@id/location_checkbox"/>
        </LinearLayout>


        <Button
            android:id="@+id/save_action"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_elements"
            android:text="@string/save_action"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location_checkbox_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
